fix spacing

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -16,10 +16,13 @@
     margin: 0px 10px 20px 10px;
 }
 
-.flex-container {
+#flex-container {
     align-items: center;
     margin-right: 30;
-    flex-direction: row;
+    flex-direction: column;
+    width: 180px;
+    height: 300px;
+    display: flex;
 }
 
 #about-body {
